--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                   width: 550, // base page width
                   height: 733, // base page height
 
-                  // size: "stretch",
+                  size: "stretch",
                   // set threshold values:
                   minWidth: 315,
                   maxWidth: 1000,
